src/objects/WageTable__c.object
<CustomObject>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:05 AM</fullName>
                </value>
                <value>
                    <fullName>12:10 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:20 AM</fullName>
                </value>
                <value>
                    <fullName>12:25 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:35 AM</fullName>
                </value>
                <value>
                    <fullName>12:40 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>12:50 AM</fullName>
                </value>
                <value>
                    <fullName>12:55 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:05 AM</fullName>
                </value>
                <value>
                    <fullName>1:10 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:20 AM</fullName>
                </value>
                <value>
                    <fullName>1:25 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:35 AM</fullName>
                </value>
                <value>
                    <fullName>1:40 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:50 AM</fullName>
                </value>
                <value>
                    <fullName>1:55 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:05 AM</fullName>
                </value>
                <value>
                    <fullName>2:10 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:20 AM</fullName>
                </value>
                <value>
                    <fullName>2:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentWageTable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Wage Table</label>
        <referenceTo>WageTable__c</referenceTo>
        <relationshipLabel>Wage Tables</relationshipLabel>
        <relationshipName>WageTables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PeriodOfService__c</fullName>
        <label>Period Of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekdays</fullName>
                </value>
                <value>
                    <fullName>Weeknights</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Public Holidays</fullName>
                </value>
                <value>
                    <fullName>Public Holidays Compensation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpecificGrade__c</fullName>
        <label>Specific Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:05 AM</fullName>
                </value>
                <value>
                    <fullName>12:10 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:20 AM</fullName>
                </value>
                <value>
                    <fullName>12:25 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:35 AM</fullName>
                </value>
                <value>
                    <fullName>12:40 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>12:50 AM</fullName>
                </value>
                <value>
                    <fullName>12:55 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:05 AM</fullName>
                </value>
                <value>
                    <fullName>1:10 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:20 AM</fullName>
                </value>
                <value>
                    <fullName>1:25 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:35 AM</fullName>
                </value>
                <value>
                    <fullName>1:40 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:50 AM</fullName>
                </value>
                <value>
                    <fullName>1:55 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:05 AM</fullName>
                </value>
                <value>
                    <fullName>2:10 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:20 AM</fullName>
                </value>
                <value>
                    <fullName>2:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WageCategory__c</fullName>
        <label>Wage Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly Care</fullName>
                </value>
                <value>
                    <fullName>Overnight Care</fullName>
                </value>
                <value>
                    <fullName>24 Hour Care</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Travel Time</fullName>
                </value>
                <value>
                    <fullName>Allowance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WageCode__c</fullName>
        <label>Wage Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WageRate__c</fullName>
        <label>Wage Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Wage Table</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Wage_Table</fullName>
        <columns>NAME</columns>
        <columns>ParentWageTable__c</columns>
        <columns>WageCategory__c</columns>
        <columns>PeriodOfService__c</columns>
        <columns>SpecificGrade__c</columns>
        <columns>WageCode__c</columns>
        <columns>WageRate__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>Wage Table</label>
        <sharedTo>
            <group>ITKinetic</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Wage Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wage Tables</pluralLabel>
    <recordTypes>
        <fullName>ParentWageTable</fullName>
        <active>true</active>
        <label>Parent Wage Table</label>
    </recordTypes>
    <recordTypes>
        <fullName>WageTable</fullName>
        <active>true</active>
        <label>Wage Table</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>